--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,11 +4,28 @@ body {
   text-align: center;
 }
 
+/* Headings */
+
 h1 {
   font-weight: normal;
   font-size: 50px;
   color: white;
 }
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+/* Paragraphs */
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+/* Links */
 
 .link {
   color: aquamarine;
